--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,65 @@
+* {
+	box-sizing: border-box;
+}
+
 .container {
 	width: 80%;
 	margin: auto;
-	border: 1px solid green;
+	/* border: 1px solid green; */
+}
+
+.gallery {
+	text-align: center;
+	/* border: 1px solid red; */
+}
+
+.search-bar {
+	text-align: center;
 }
 
 .search {
 	border: 1px solid lightgrey;
 	display: block;
-	width: 45%;
+	width: 40%;
+	max-width: 400px;
+	min-width: 190px;
 	margin: 20px auto;
 	padding: 5px 20px;
 }
 
-.gallery {
-	text-align: center;
-	border: 1px solid red;
+li {
+	/* border: 1px solid blue; */
+	margin: 5px;
+
+	flex: 1 20%;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
+
 
 .list {
-	list-style-type: none;
+	/* border: 3px solid orange; */
+	max-width: 1000px; /* This is it!!! */
 	padding: 0;
-	border: 1px solid orange;
+	margin: auto;
+	width: 80%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 
-}
-
-li {
-	width: 240px;
-	margin: 1em auto;
-	border: 1px solid blue;
 }
 
 .thumb {
-	border: 1px dotted red;
+	height: 200px;
+	width: 200px;
+	/* border: 1px dotted red; */
 }
 
-/* Media 560px */ 
+/* Media 560px */
 
- @media (min-width: 560px){
+ /* @media (min-width: 560px){
 	.list {
 		display: flex;
 		flex-wrap: wrap;
@@ -46,7 +69,7 @@ li {
 	li {
 		flex: 1 250px;
 	}
-}
+} */
 
 /* @media (min-width: 768px) {
 	.list {
